--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.7.2",
     "dompurify": "^3.1.6",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-lazyload": "^3.2.1",
     "react-range": "^1.9.2",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
@@ -35,6 +37,7 @@
     "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lazyload": "^3.2.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
