--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-lazyload": "^3.2.1",
     "react-range": "^1.9.2",
     "react-router-dom": "^6.24.1",
